# gfmodules-pseudoniemendienst-stub

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.conf.autopilot  app.conf.example  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yaml  integration-tests.yml  release-package-venv.yaml  release-package.yaml
app/: application.py  config.py  container.py  create_db.py  cron.py  data.py  dependencies.py  main.py  stats.py  telemetry.py
app/db/: __init__.py  db.py  db_session.py  decorator.py  models.py  session.py
app/db/models/: base.py  pseudonym_entry.py  ura_number_allowlist.py
app/db/repository/: __init__.py  pseudonym_entry.py  respository_base.py  ura_number_allowlist_repository.py
app/middleware/ura_middleware/: allowlisted_ura_middleware.py  config_based_ura_middleware.py  request_ura_middleware.py  ura_middleware.py
app/pseudonym/: service.py
app/routers/: default.py  example.py  pseudonym.py
docker/: Dockerfile  init.sh
seed-sql/: seed.sql
sql/: 000-initial.sql  001-pseudonyms.sql  002-ura-allowlist.sql
tests/: conftest.py  test_config.py  test_service.py
tests/middleware/ura_middleware/: test_allowlisted_ura_middleware.py  test_request_ura_middleware.py
tools/: autopilot.sh  generate_certs.sh  migrate_db.sh  seed.sh  seed.sql
