[tool.poetry]
name = "gfmodules-pseudonym-service"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/nl-irealisatie-zmodules-pseudonym-register"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.40.0"
fastapi = "^0.128"
mypy = "^1.19.1"
pydantic-settings = "^2.12.0"
inject = "^5.3.0"
sqlalchemy = "^2.0.45"
psycopg = { extras = ["binary", "pool"], version = "^3.3.2" }
types-requests = "^2.32.4.20260107"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
opentelemetry-instrumentation = "^0.45b0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-requests = "^0.45b0"
requests = "^2.32.5"
statsd = "^4.0.1"
puzi = { git = "https://github.com/minvws/puzi-python.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
ruff = "^0.14.13"
codespell = "^2.4.1"
pysqlite3 = "^0.6.0"
pip-audit = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
